--- a/www/css/theme.css
+++ b/www/css/theme.css
@@ -18,6 +18,7 @@ select {
 	min-height:20px;
 	min-width:100px;
 	border-radius:6px;
+	outline-style:none;
 }
 select:disabled {
 	border: 1px solid #c0c0c0;
@@ -29,7 +30,9 @@ select:not([disabled]):hover {
 }
 
 select:focus {
-	color: #000000;
+	color: #505050;
+	color: rgba(80,80,80,0);
+	text-shadow: 0 0 0 #505050;
 	background: #ffffff;
 	box-shadow: 0 1px 0 #2392F3 inset, 0 -1px 0 #2392F3 inset, 1px 0 0 #2392F3 inset, -1px 0 0 #2392F3 inset, 0 0 4px rgba(35,146,243,0.5);
 }
@@ -40,19 +43,25 @@ input[type='text'] {
 	font-size: 14px;
 	background-color: #f8f8f8;
 	color: #505050;
+	
 	font-weight:bold;
 	border-radius:6px;
 	padding-left:6px;
+		outline-style:none;
 }
 input[type='text']:not(.error):not([disabled]):hover {
-	color: #000000;
+
+		color: #505050;
+
 	background: #ffffff;
 	box-shadow: 0 1px 0 #2392F3 inset, 0 -1px 0 #2392F3 inset, 1px 0 0 #2392F3 inset, -1px 0 0 #2392F3 inset,  0 0 4px rgba(35,146,243,0.5); 
 }
 
 
 input[type='text']:not(.error):not([hover]):focus {
-	color: #000000;
+
+		color: #505050;
+
 	background: #ffffff;
 	box-shadow: 0 1px 0 #2392F3 inset, 0 -1px 0 #2392F3 inset, 1px 0 0 #2392F3 inset, -1px 0 0 #2392F3 inset, 0 0 4px rgba(35,146,243,0.5); 
 
@@ -69,6 +78,8 @@ color:#c8c8c8;
 input[type='text'].error {
 	/*border-color:red;*/
 	/*border : 0px solid red;*/
+		color: #505050;
+
 	box-shadow: 0 1px 0 red inset, 0 -1px 0 red inset, 1px 0 0 red inset, -1px 0 0 red inset, 0 0 4px rgba(255,0,0,0.5);
 }
 
@@ -91,8 +102,10 @@ button {
 	background: -ms-linear-gradient(top, #1a82f7, #2F2727); /* IE10 */
 	background: -o-linear-gradient(top, #1a82f7, #2F2727); /* Opera 11.1+ */
 	color: white ;
-
+		outline-style:none;
 }  
+
+button::-moz-focus-inner { border: 0; }
 
 button:disabled {
 	color: #909090;
@@ -118,7 +131,6 @@ button:not([disabled]):hover {
 .hidden {
 visibility:hidden;
 }
-
 
 h1 {
 	position:relative;
